--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </select>
     </div>
     -->
-
+<!--Its a comment-->
     <script src="js/main.js" type="module"></script>
 
     <div id="pomodoro-section-container" style="display: none;"> <!-- Hidden by default -->
